# HybridHomomorphicEncryption-IoT-ESP32

./: .gitignore  .gitmodules  README.md
client/: platformio.ini
client/lib/agrasta/: agrasta.cpp
client/lib/filip_1280/: filip_1280.cpp  filip_1280.h
client/lib/kreyvium_12/: kreyvium_12.cpp
client/lib/kreyvium_13/: kreyvium_13.cpp
client/lib/lib/kreyvium/: kreyvium.cpp  kreyvium.h
client/lib/lib/kreyvium_12/: kreyvium_12.h
client/lib/lib/kreyvium_13/: kreyvium_13.h
client/lib/lowmc/: lowmc.cpp  lowmc.h
client/lib/rasta_5/: rasta_5.cpp  rasta_5.h
client/lib/rasta_6/: rasta_6.cpp  rasta_6.h
client/src/: main.cpp
fhe-server/: CMakeLists.txt  Dockerfile  docker-compose.yml  watch_build.sh
fhe-server/include/: ICipherHandler.h  MQTTCallback.h  ThreadPool.h  Topics.h  Utils.h
fhe-server/include/ciphers/: HElib_Cipher.h  SEAL_Cipher.h  TFHE_Cipher.h  agrasta_helib.h  agrasta_plain.h  agrasta_seal.h  agrasta_tfhe.h  filip_1280_helib.h  filip_1280_plain.h  filip_1280_seal.h  filip_1280_tfhe.h  kreyvium_12_helib.h  kreyvium_12_plain.h  kreyvium_12_seal.h  kreyvium_12_tfhe.h  kreyvium_13_helib.h  kreyvium_13_plain.h  kreyvium_13_seal.h  kreyvium_13_tfhe.h  kreyvium_helib.h  kreyvium_seal.h  kreyvium_tfhe.h  lowmc_helib.h  lowmc_plain.h  lowmc_seal.h  lowmc_tfhe.h  matrix_helib.h  rasta_5_helib.h  rasta_5_plain.h  rasta_5_seal.h  rasta_5_tfhe.h  rasta_6_helib.h  rasta_6_plain.h  rasta_6_seal.h  rasta_6_tfhe.h
fhe-server/include/handlers/: AgrastaHelibHandler.h  AgrastaSealHandler.h  AgrastaTFHEHandler.h  Filip1280HelibHandler.h  Filip1280SealHandler.h  Filip1280TfheHandler.h  Kreyvium12Handler.h  Kreyvium12HelibHandler.h  Kreyvium12SealHandler.h  Kreyvium12TfheHandler.h  Kreyvium13HelibHandler.h  Kreyvium13SealHandler.h  Kreyvium13TfheHandler.h  KreyviumHandler.h  KreyviumHelibHandler.h  KreyviumSealHandler.h  KreyviumTfheHandler.h  LowmcHelibHandler.h  LowmcSealHandler.h  LowmcTFHEHandler.h  Rasta5HelibHandler.h  Rasta5SealHandler.h  Rasta5TfheHandler.h  Rasta6HelibHandler.h  Rasta6SealHandler.h  Rasta6TfheHandler.h
fhe-server/measurement/: Kreyvium12_tfhe_measurement.csv  Kreyvium13_tfhe_measurement.csv  Kreyvium_tfhe_measurement.csv  agrasta_helib_measurement.csv  agrasta_seal_measurement.csv  agrasta_tfhe_measurement.csv  filip1280_helib_measurement.csv  filip1280_seal_measurement.csv  filip1280_tfhe_measurement.csv  kreyvium12_helib_measurement.csv  kreyvium12_seal_measurement.csv  kreyvium13_helib_measurement.csv  kreyvium13_seal_measurement.csv  kreyvium_helib_measurement.csv  kreyvium_seal_measurement.csv  lowmc_helib_measurement.csv  lowmc_seal_measurement.csv  lowmc_tfhe_measurement.csv  rasta5_helib_measurement.csv  rasta5_seal_measurement.csv  rasta5_tfhe_measurement.csv  rasta6_helib_measurement.csv  rasta6_seal_measurement.csv  rasta6_tfhe_measurement.csv
fhe-server/src/: MQTTCallback.cpp  ThreadPool.cpp  Utils.cpp  main.cpp
fhe-server/src/ciphers/: HElib_Cipher.cpp  SEAL_Cipher.cpp  TFHE_Cipher.cpp  agrasta_helib.cpp  agrasta_plain.cpp  agrasta_seal.cpp  agrasta_tfhe.cpp  kreyvium_12_seal.cpp  kreyvium_12_tfhe.cpp  kreyvium_13_helib.cpp  kreyvium_13_seal.cpp  kreyvium_13_tfhe.cpp  kreyvium_helib.cpp  kreyvium_seal.cpp  kreyvium_tfhe.cpp  lowmc_helib.cpp  lowmc_plain.cpp  lowmc_seal.cpp  lowmc_tfhe.cpp  rasta_5_helib.cpp  rasta_5_plain.cpp  rasta_5_seal.cpp  rasta_5_tfhe.cpp  rasta_6_helib.cpp  rasta_6_plain.cpp  rasta_6_seal.cpp  rasta_6_tfhe.cpp
fhe-server/src/handlers/: AgrastaHelibHandler.cpp  AgrastaSealHandler.cpp  AgrastaTFHEHandler.cpp  Filip1280HelibHandler.cpp  Filip1280SealHandler.cpp  Filip1280TfheHandler.cpp  Kreyvium12HelibHandler.cpp  Kreyvium12SealHandler.cpp  Kreyvium12TfheHandler.cpp  Kreyvium13HelibHandler.cpp  Kreyvium13SealHandler.cpp  Kreyvium13TfheHandler.cpp  KreyviumHelibHandler.cpp  KreyviumSealHandler.cpp  KreyviumTfheHandler.cpp  LowmcHelibHandler.cpp  LowmcSealHandler.cpp  LowmcTFHEHandler.cpp  Rasta5HelibHandler.cpp  Rasta5SealHandler.cpp  Rasta5TfheHandler.cpp  Rasta6HelibHandler.cpp  Rasta6SealHandler.cpp  Rasta6TfheHandler.cpp
fhe-server/util/aes/: aes.h
